Create sign_in_screen.dart, sign_up_screen.dart, and dashboard.dart. use provider for minor state management, exposuring things across the widget tree, and abstracting state. Use Bloc for managing state between layer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^5.6.0
   firebase_auth: ^5.3.4 # For Firebase Authentication
   firebase_storage: 12.3.7
+  provider: ^6.1.2
 
 
 dev_dependencies:
