--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.0
   get_it: ^7.2.0
-  cloud_firestore: ^5.6.0
+  cloud_firestore: ^5.6.0 # For Firebase Core, enabling connecting to multiple Firebase apps
   firebase_auth: ^5.3.4 # For Firebase Authentication
   firebase_storage: 12.3.7
+  firebase_core: ^3.9.0
   provider: ^6.1.2
 
 
