--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,35 +28,35 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.0 # For Firebase Core, enabling connecting to multiple Firebase apps
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   equatable: ^2.0.5
+  firebase_auth: ^5.3.4 # For Firebase Authentication
+  firebase_core: ^3.9.0
+  firebase_storage: 12.3.7
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
   get_it: ^7.2.0
-  cloud_firestore: ^5.6.0 # For Firebase Core, enabling connecting to multiple Firebase apps
-  firebase_auth: ^5.3.4 # For Firebase Authentication
-  firebase_storage: 12.3.7
-  firebase_core: ^3.9.0
   provider: ^6.1.2
 
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  very_good_analysis: ^7.0.0 # For lint rules for Dart and Flutter used at Very Good Ventures
-  mocktail: ^1.0.0
   bloc_test: ^9.1.7
   fake_cloud_firestore: ^3.1.0 # For mocking cloud firestore
   firebase_storage_mocks: ^0.7.0 # For mocking firebase storage
+  flutter_test:
+    sdk: flutter
+  mocktail: ^1.0.0
+  very_good_analysis: ^7.0.0 # For lint rules for Dart and Flutter used at Very Good Ventures
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+#  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
