--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,21 @@ dependencies:
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   equatable: ^2.0.5
+  firebase_app_check: ^0.3.2
   firebase_auth: ^5.3.4 # For Firebase Authentication
   firebase_core: ^3.9.0
   firebase_storage: 12.3.7
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  flutter_quill: ^10.8.5
   get_it: ^7.2.0
   iconly: ^1.0.1
+  image: ^4.5.2
+  image_picker: ^1.1.2
+  intl: ^0.19.0
   provider: ^6.1.2
+  uuid: ^4.5.1
 
 
 dev_dependencies:
