--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   cloud_firestore: ^5.6.0 # For Firebase Core, enabling connecting to multiple Firebase apps
   cupertino_icons: ^1.0.6
+  dart_sentiment: ^0.0.9
   dartz: ^0.10.1
   equatable: ^2.0.5
   firebase_app_check: ^0.3.2
   firebase_auth: ^5.3.4 # For Firebase Authentication
   firebase_core: ^3.9.0
   firebase_storage: 12.3.7
+  fl_chart: ^0.70.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
@@ -46,6 +48,8 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   provider: ^6.1.2
+  tflite_flutter: ^0.11.0
+
   uuid: ^4.5.1
 
 
@@ -77,7 +81,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/sentiment_model.tflite
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
