--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  flutter_local_notifications: ^18.0.1
   flutter_quill: ^10.8.5
   get_it: ^7.2.0
   iconly: ^1.0.1
