--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,15 +44,19 @@ dependencies:
   flutter_bloc: ^8.0.0
   flutter_local_notifications: ^18.0.1
   flutter_quill: ^10.8.5
+  flutter_timezone: ^4.1.0
   get_it: ^7.2.0
   iconly: ^1.0.1
   image: ^4.5.2
   image_picker: ^1.1.2
   intl: ^0.19.0
+  lottie: ^3.3.1
   provider: ^6.1.2
+  shared_preferences: ^2.5.2
   tflite_flutter: ^0.11.0
 
   uuid: ^4.5.1
+  workmanager: ^0.5.2
 
 
 dev_dependencies:
@@ -85,6 +89,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/sentiment_model.tflite
+    - assets/lottie/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
