--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^6.2.0
   carousel_slider: ^5.0.0
   cloud_firestore: ^5.6.0 # For Firebase Core, enabling connecting to multiple Firebase apps
   cupertino_icons: ^1.0.6
@@ -90,6 +91,8 @@ flutter:
   assets:
     - assets/sentiment_model.tflite
     - assets/lottie/
+    - assets/audio/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
